fix Shop padding and container gaps

--- a/src/css/Shop.css
+++ b/src/css/Shop.css
@@ -9,11 +9,12 @@
 }
 
 #shop-container {
-  padding: 1rem 2rem;
+  padding: 2rem;
   display: grid;
   height: 100%;
   grid-template-rows: 95% 5%;
   grid-template-columns: 1fr 3fr;
+  gap: 1rem;
 }
 
 @media screen and (max-width: 900px) {
