--- a/src/css/filters.css
+++ b/src/css/filters.css
@@ -1,6 +1,5 @@
 #filters {
   display: flex;
-  padding: 1rem;
   gap: 1rem;
   flex-direction: column;
 }
