--- a/src/css/items.css
+++ b/src/css/items.css
@@ -1,11 +1,11 @@
 #items {
-  padding: 1rem;
   display: grid;
   gap: 1.3rem;
   grid-auto-rows: 300px;
   grid-template-columns: repeat(3, 300px);
   justify-content: center;
   overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 .item-container {
@@ -32,8 +32,14 @@
 @media screen and (max-width: 900px) {
 }
 
+@media screen and (max-width: 750px) {
+  #items {
+    grid-template-columns: 300px;
+  }
+}
+
 #items::-webkit-scrollbar {
-  width: 5px;
+  width: 6px;
   height: 10px;
 }
 
